--- a/poker/templates/poker/game.html
+++ b/poker/templates/poker/game.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -347,3 +349,4 @@
     </script>
 </body>
 </html>
+{% endblock %}
