--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,4 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -53,3 +55,4 @@
     </div>
 </body>
 </html>
+{% endblock %}
