--- a/templates/registration/signup_successful.html
+++ b/templates/registration/signup_successful.html
@@ -1,4 +1,6 @@
+{% extends 'base.html' %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,3 +23,4 @@
     </div>
 </body>
 </html>
+{% endblock %}
