--- a/templates/registration/verification_failed.html
+++ b/templates/registration/verification_failed.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -21,4 +23,4 @@
     </div>
 </body>
 </html>
-Improve
+{% endblock %}
