--- a/apps/poker/templates/poker/game.html
+++ b/apps/poker/templates/poker/game.html
@@ -10,6 +10,7 @@
             background-color: #f0f0f0;
             margin: 0;
             padding: 20px;
+            margin-top: 50px;
         }
         
         .game-container {
