--- a/apps/poker/templates/poker/game.html
+++ b/apps/poker/templates/poker/game.html
@@ -364,7 +364,7 @@
                 updateGameState(data);
                 enableGameButtons(true);
                 document.querySelector('.start-button').disabled = true;
-                document.querySelector('.exit-button').disabled = false;
+                <!-- document.querySelector('.exit-button').disabled = false; -->
             })
             .catch(error => {
                 console.error('Error:', error);
