--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <div class="nav-left">
             <a href="{% url 'poker:home' %}" class="nav-link">Home</a>
             <a href="{% url 'poker:game' %}" class="nav-link">Games</a>
-            <a href="{% url 'poker:staking' %}" class="nav-link">Staking</a>
+            <a href="{% url 'poker:dev' %}" class="nav-link">Development</a>
         </div>
         <div class="auth-info">
             <button onclick="addCoins()" class="add-coins-btn">Claim Daily Coins! 🪙</button>
