--- a/apps/users/templates/registration/signup.html
+++ b/apps/users/templates/registration/signup.html
@@ -5,10 +5,9 @@
 <html>
 <head>
     <title>Sign Up - zkBoker</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/auth.css' %}">
 </head>
 <body>
-    <div class="auth-container">
+    <div class="auth-card">
         <h1 class="title">Sign Up for zkBoker</h1>
         
         <form method="post">
