--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,11 @@
     <title>zkBoker</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🃏</text></svg>">
+    <!-- Dark mode stylesheet -->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+    <script src="{% static 'js/theme.js' %}"></script>
 </head>
 <body>
     {% if user.is_authenticated %}
